# ros2_ws_V2XVF

./: README.md
map_manager/: CMakeLists.txt  package.xml
map_manager/src/: map_manager.cpp
map_providers/: CMakeLists.txt  package.xml
map_providers/src/: cam_provider.cpp  cam_provider.hpp
ros_etsi_its_msgs-master/: CMakeLists.txt  package.xml
ros_etsi_its_msgs-master/include/etsi_its_msgs/etsi_its_msgs/msg/: acceleration_control.h  acceleration_control.hpp  action_id.h  action_id.hpp  altitude.h  altitude.hpp  basic_vehicle_container_high_frequency.h  basic_vehicle_container_high_frequency.hpp  basic_vehicle_container_low_frequency.h  basic_vehicle_container_low_frequency.hpp  cam.h  cam.hpp  cause_code.h  cause_code.hpp  cbr.h  cbr.hpp  connection.h  connection.hpp  cpm.h  cpm.hpp  curvature.h  curvature.hpp  curvature_calculation_mode.h  curvature_calculation_mode.hpp  delta_reference_position.h  delta_reference_position.hpp  denm.h  denm.hpp  drive_direction.h  drive_direction.hpp  dynamic_status.h  dynamic_status.hpp  event_point.h  event_point.hpp  exterior_lights.h  exterior_lights.hpp  generic_lane.h  generic_lane.hpp  header.h  header.hpp  (+90 more)
ros_etsi_its_msgs-master/include/etsi_its_msgs/etsi_its_msgs/msg/detail/: acceleration_control__builder.hpp  acceleration_control__functions.h  acceleration_control__rosidl_typesupport_fastrtps_c.h  acceleration_control__rosidl_typesupport_fastrtps_cpp.hpp  acceleration_control__rosidl_typesupport_introspection_c.h  acceleration_control__rosidl_typesupport_introspection_cpp.hpp  acceleration_control__struct.h  acceleration_control__struct.hpp  acceleration_control__traits.hpp  acceleration_control__type_support.h  action_id__builder.hpp  action_id__functions.h  action_id__rosidl_typesupport_fastrtps_c.h  action_id__rosidl_typesupport_fastrtps_cpp.hpp  action_id__rosidl_typesupport_introspection_c.h  action_id__rosidl_typesupport_introspection_cpp.hpp  action_id__struct.h  action_id__struct.hpp  action_id__traits.hpp  action_id__type_support.h  altitude__builder.hpp  altitude__functions.h  altitude__rosidl_typesupport_fastrtps_c.h  altitude__rosidl_typesupport_fastrtps_cpp.hpp  altitude__rosidl_typesupport_introspection_c.h  altitude__rosidl_typesupport_introspection_cpp.hpp  altitude__struct.h  altitude__struct.hpp  altitude__traits.hpp  altitude__type_support.h  basic_vehicle_container_high_frequency__builder.hpp  basic_vehicle_container_high_frequency__functions.h  basic_vehicle_container_high_frequency__rosidl_typesupport_fastrtps_c.h  basic_vehicle_container_high_frequency__rosidl_typesupport_fastrtps_cpp.hpp  basic_vehicle_container_high_frequency__rosidl_typesupport_introspection_c.h  basic_vehicle_container_high_frequency__rosidl_typesupport_introspection_cpp.hpp  basic_vehicle_container_high_frequency__struct.h  basic_vehicle_container_high_frequency__struct.hpp  basic_vehicle_container_high_frequency__traits.hpp  basic_vehicle_container_high_frequency__type_support.h  (+590 more)
ros_etsi_its_msgs-master/msg/: CPM.msg  Header.msg  MAPEM.msg  MatchedPosition.msg  ObjectDimension.msg  PerceivedObject.msg  VehicleSensorProperty.msg
v2xvf_interfaces/: CMakeLists.txt  package.xml
v2xvf_interfaces/msg/: AccelerationControl.msg  ListMapObjects.msg  MapObject.msg
